// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TextField Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rc:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rb:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rb:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:ra:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAs play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:ri:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rh:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:rh:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r"
    >
    </textarea>
    <div id="textFieldErrorId-:rg:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label id="labelId-:r5:"
           class="LabelWithHelp_label__59tP-"
           for="htmlid"
    >
      Navn
    </label>
    <input id="htmlid"
           class="TextField_textbox__qbZlk"
           data-testid="123ID"
           form="formid123"
           value
    >
    <div id="textFieldErrorId-:r3:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAutoCompleteInputModeNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r14:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r13:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r13:"
           class="TextField_textbox__qbZlk"
           autocomplete="given-name"
           inputmode="text"
           name="test_name"
           placeholder="Kari Nordmann"
           value
    >
    <div id="textFieldErrorId-:r12:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:r8:"
           class="LabelWithHelp_label__59tP-   dummyClassname"
           for="textFieldTextboxId-:r7:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r7:"
           class="TextField_textbox__qbZlk    dummyClassnameFormContainer"
           aria-describedby="textFieldErrorId-:r6:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r6:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW dummyClassname">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rr:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rq:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rq:"
           class="TextField_textbox__qbZlk"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rp:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndAutoSizeTextArea play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r11:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r10:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:r10:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r TextField_textbox_autosize__Ws65A"
              style="height: 88px;"
    >
      Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
    </textarea>
    <div id="textFieldErrorId-:rv:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:ru:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rt:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rt:"
           class="TextField_textbox__qbZlk"
           value="10 000"
    >
    <div id="textFieldErrorId-:rs:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r20:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1v:"
    >
      Navn
    </label>
    <div class="Help_description__niabw">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r1v:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r1u:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rl:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rk:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rk:"
           class="TextField_textbox__qbZlk"
           disabled
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rj:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1s:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1r:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1r:"
           class="TextField_textbox__qbZlk"
           aria-describedby="textFieldErrorId-:r1q:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r1q:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2m:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r2l:"
    >
      TextField har blitt blurret
    </label>
    <input id="textFieldTextboxId-:r2l:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r2k:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2c:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r2b:"
    >
      Navn
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r2c:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2d:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2d:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r2b:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r2a:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpTextAndDescription smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2h:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r2g:"
    >
      Navn
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r2h:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2i:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2i:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_description__niabw">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r2g:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r2f:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2p:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r2o:"
    >
      Navn
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r2p:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2q:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2q:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r2o:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r2n:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r23:"
           class="LabelWithHelp_label__59tP-  LabelWithHelp_srOnly__uWL7Z"
           for="textFieldTextboxId-:r22:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r22:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r21:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithMinAndMaxLength play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1g:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1f:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1f:"
           class="TextField_textbox__qbZlk"
           maxlength="50"
           minlength="10"
           value
    >
    <div id="textFieldErrorId-:r1e:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithPattern play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1j:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1i:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1i:"
           class="TextField_textbox__qbZlk"
           pattern="[a-z]"
           value
    >
    <div id="textFieldErrorId-:r1h:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r17:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r16:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r16:"
           class="TextField_textbox__qbZlk"
           readonly
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:r15:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1:"
           class="TextField_textbox__qbZlk"
           value
           name="dummyNameForwardedFromRef"
    >
    <div id="textFieldErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1a:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r19:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r19:"
           class="TextField_textbox__qbZlk"
           required
           value
    >
    <div id="textFieldErrorId-:r18:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1d:"
           class="LabelWithHelp_label__59tP- LabelWithHelp_label_required__KSuzW"
           for="textFieldTextboxId-:r1c:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1c:"
           class="TextField_textbox__qbZlk"
           required
           value
    >
    <div id="textFieldErrorId-:r1b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRows play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1m:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1l:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:r1l:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r"
              rows="4"
    >
    </textarea>
    <div id="textFieldErrorId-:r1k:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithTextAreaAutoSizeInModal play-test 1`] = `
<div data-test-block="true">
  <button class="Button_button__pkuNv Button_button_primary__8Ouwo   "
          type="button"
  >
    <span class="Button_buttonText__JxyB+">
      Vis modal
    </span>
  </button>
  <dialog class="Modal_modal__JdsM-"
          aria-labelledby="modalHeadingId-:r2r:"
          open
  >
    <div tabindex="-1"
         class="Modal_modalContainer__O6yz0"
    >
      <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  Modal_closeButton__PGrRw"
              type="button"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2s:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2s:">
            Lukk dialogvindu
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
      <div class="Modal_modalPaddingL__TAljg">
        <h1 id="modalHeadingId-:r2r:"
            class="Heading_heading__7K0um Heading_heading_level3__T5BVI Heading_heading_hasSpacingSmall__ofrX+ Modal_modalHeading__PFiZv"
        >
          Modal med textarea
        </h1>
        <div class>
          <label id="labelId-:r2v:"
                 class="LabelWithHelp_label__59tP-"
                 for="textFieldTextboxId-:r2u:"
          >
            Navn
          </label>
          <textarea id="textFieldTextboxId-:r2u:"
                    class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r TextField_textbox_autosize__Ws65A"
                    style="height: 0px;"
          >
          </textarea>
          <div id="textFieldErrorId-:r2t:"
               aria-live="assertive"
               aria-atomic="true"
          >
          </div>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/TextField WithThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r26:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r25:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r25:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r24:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithThousandSeparatorAndNegativeValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r29:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r28:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r28:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r27:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:ro:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rn:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rn:"
           class="TextField_textbox__qbZlk"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rm:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rf:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:re:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:re:"
           class="TextField_textbox__qbZlk TextField_textbox_large__Qmwm8"
           value
    >
    <div id="textFieldErrorId-:rd:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
